Fix decimal bug and wrap number in display

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ body {
     background-color: bisque;
     margin-bottom: 20px;
     padding: 60px;
+    word-break: break-all;
 }
 
 p {
